# log-parser

./: Cargo.toml  README.md  sample_file_1000_2_100.txt
src/: main.rs  parser.rs
