[package]
name = "log-parser"
version = "0.1.0"
authors = ["Piotr Babel <piotr.babel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.0"
env_logger = "0.7.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
dashmap = "3.11.10"

# used for tests
rayon = "1.4.1"
memmap = "0.7.0"
crossbeam-channel = "0.5.0"
rand = "0.7.3"
uuid = { version = "0.8", features = ["serde", "v4"] }